# sdl_stuff

SDL3-3.2.24-win32-x64/: CreateLibFromDll.bat  SDL3.exp  SDL3.lib  create_def.bat
handmade_rts/: readme.md
t3st/: .gitignore  CMakeLists.txt  README.md  build.bat
t3st/docs/: design.md
t3st/include/: engine.h  game.h  input.h  memory.h  render.h
t3st/src/: engine.c  game.c  input.c  main.c  memory.c  render.c
test/: SDL3.lib  build.bat  main.c
test04-11-2025/: build copy.bat  build.bat
test04-11-2025/libs/sdl3/x64/: SDL3.def  SDL3.exp  SDL3.lib
test04-11-2025/src/: main.c
